--- a/.env.development
+++ b/.env.development
@@ -13,8 +13,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# axios 请求根路径
+VUE_APP_BASE_API = '/api'
 
 # 设置端口号
 port = 8848
